crates/weft-snapshots/tests/snapshots/a2ui/example-tabs.snap
---
source: crates/weft-snapshots/tests/interop.rs
description: example-tabs as a2ui
---
[
  {
    "version": "v0.9",
    "createSurface": {
      "surfaceId": "root",
      "catalogId": "https://a2ui.org/specification/v0_9/catalogs/basic/catalog.json"
    }
  },
  {
    "version": "v0.9",
    "updateComponents": {
      "surfaceId": "root",
      "components": [
        {
          "id": "root",
          "component": "Column",
          "children": [
            "account-tabs"
          ],
          "accessibility": {
            "label": "Account"
          }
        },
        {
          "id": "account-tabs",
          "component": "Tabs",
          "tabs": [
            {
              "title": "Profile",
              "child": "profile-text"
            },
            {
              "title": "Security",
              "child": "security-text"
            }
          ]
        },
        {
          "id": "profile-text",
          "component": "Text",
          "text": "Your public details."
        },
        {
          "id": "security-text",
          "component": "Text",
          "text": "Password and sessions."
        }
      ]
    }
  }
]
