crates/weft-snapshots/tests/snapshots/a2ui/example-text.snap
---
source: crates/weft-snapshots/tests/interop.rs
description: example-text as a2ui
---
[
  {
    "version": "v0.9",
    "createSurface": {
      "surfaceId": "root",
      "catalogId": "https://a2ui.org/specification/v0_9/catalogs/basic/catalog.json"
    }
  },
  {
    "version": "v0.9",
    "updateComponents": {
      "surfaceId": "root",
      "components": [
        {
          "id": "root",
          "component": "Column",
          "children": [
            "saved",
            "user"
          ],
          "accessibility": {
            "label": "Status"
          }
        },
        {
          "id": "saved",
          "component": "Text",
          "text": "All changes saved."
        },
        {
          "id": "user",
          "component": "Text",
          "text": {
            "path": "/user/name"
          }
        }
      ]
    }
  }
]
